Move nuspec file into the project and changed to use replacement tokens.
--HG--
rename : SnowMaker.spec => SnowMaker/SnowMaker.nuspec

--- a/SnowMaker/SnowMaker.nuspec
+++ b/SnowMaker/SnowMaker.nuspec
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <id>SnowMaker</id>
-    <version>1.0</version>
-    <authors>Tatham Oddie and Jamal Abreu</authors>
-    <owners>Tatham Oddie and Jamal Abreu</owners>
+    <id>$id$</id>
+    <version>$version$</version>
+    <authors>$author$</authors>
+    <owners>$author$</owners>
     <licenseUrl>http://www.opensource.org/licenses/MS-PL</licenseUrl>
     <projectUrl>https://bitbucket.org/tatham/snowmaker</projectUrl>
-    <description>Distributed unique ID generator for Azure environments.</description>
+    <description>High performance, distributed unique id generator for Azure environments.</description>
     <tags>Azure</tags>
   </metadata>
 </package>
