--- a/SnowMaker/SnowMaker.csproj
+++ b/SnowMaker/SnowMaker.csproj
@@ -47,6 +47,7 @@
     <Compile Include="IOptimisticSyncStore.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="IUniqueIdGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UniqueIdGenerator.cs">
       <SubType>Code</SubType>
