--- a/SnowMaker/SnowMaker.csproj
+++ b/SnowMaker/SnowMaker.csproj
@@ -49,6 +49,7 @@
     </Compile>
     <Compile Include="IUniqueIdGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScopeState.cs" />
     <Compile Include="UniqueIdGenerator.cs">
       <SubType>Code</SubType>
     </Compile>
