--- a/SnowMaker/SnowMaker.csproj
+++ b/SnowMaker/SnowMaker.csproj
@@ -44,6 +44,7 @@
     <Compile Include="BlobOptimisticDataStore.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="DictionaryExtensions.cs" />
     <Compile Include="IOptimisticDataStore.cs">
       <SubType>Code</SubType>
     </Compile>
