--- a/IntegrationTests.cs/IntegrationTests.cs.csproj
+++ b/IntegrationTests.cs/IntegrationTests.cs.csproj
@@ -54,6 +54,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SnowMaker\SnowMaker.csproj">
+      <Project>{0AD4FCE5-6968-4B85-9159-50F63D168907}</Project>
+      <Name>SnowMaker</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
