--- a/IntegrationTests/IntegrationTests.csproj
+++ b/IntegrationTests/IntegrationTests.csproj
@@ -53,7 +53,9 @@
     <Compile Include="Azure.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ITestScope.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scenarios.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
