--- a/SnowMaker/SnowMaker.csproj
+++ b/SnowMaker/SnowMaker.csproj
@@ -45,6 +45,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="DictionaryExtensions.cs" />
+    <Compile Include="FileOptimisticDataStore.cs" />
     <Compile Include="IOptimisticDataStore.cs">
       <SubType>Code</SubType>
     </Compile>
