--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\UnitTests\packages.config" />
   <repository path="..\IntegrationTests.cs\packages.config" />
+  <repository path="..\IntegrationTests\packages.config" />
+  <repository path="..\UnitTests\packages.config" />
 </repositories>
