--- a/UnitTests/packages.config
+++ b/UnitTests/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NUnit" version="2.5.10.11092" />
+  <package id="Microsoft.Data.Edm" version="5.0.2" targetFramework="net40" />
+  <package id="Microsoft.Data.OData" version="5.0.2" targetFramework="net40" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net40" />
   <package id="NSubstitute" version="1.1.0.0" />
+  <package id="NUnit" version="2.5.10.11092" />
+  <package id="System.Spatial" version="5.0.2" targetFramework="net40" />
+  <package id="WindowsAzure.Storage" version="2.0.3.0" targetFramework="net40" />
 </packages>
