--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,5 +2,6 @@
 <repositories>
   <repository path="..\IntegrationTests.cs\packages.config" />
   <repository path="..\IntegrationTests\packages.config" />
+  <repository path="..\SnowMaker\packages.config" />
   <repository path="..\UnitTests\packages.config" />
 </repositories>
