--- a/IntegrationTests/IntegrationTests.csproj
+++ b/IntegrationTests/IntegrationTests.csproj
@@ -73,8 +73,8 @@
     <Compile Include="Azure.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="File.cs" />
     <Compile Include="ITestScope.cs" />
+    <Compile Include="OptimisticFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scenarios.cs" />
   </ItemGroup>
