--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -74,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DictionaryExtentionsTests.cs" />
+    <Compile Include="FileOptimisticDataStoreTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UniqueIdGeneratorTest.cs" />
   </ItemGroup>
