--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        os: [ubuntu-latest]
 
     steps:
     - uses: actions/checkout@v2
@@ -22,27 +22,29 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.1.201
-
+        dotnet-version: 2.1.805
+  
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 2.1.805
+        dotnet-version: 3.1.201
 
-    - name: Setup side by side .NET SDKs on Windows
-      if: matrix.os == 'windows-latest'
-      run: |
-        SET DOTNET_21_ROOT=%DOTNET_ROOT:3.1.201=2.1.805%
-        xcopy /s /y /d %DOTNET_31_ROOT% %DOTNET_ROOT%
-      shell: cmd
+    # - name: Setup side by side .NET SDKs on Windows
+    #   if: matrix.os == 'windows-latest'
+    #   run: |
+    #     SET DOTNET_21_ROOT=%DOTNET_ROOT:3.1.201=2.1.805%
+    #     xcopy /s /y /d %DOTNET_31_ROOT% %DOTNET_ROOT%
+    #   shell: cmd
 
+    #workaround https://github.com/actions/setup-dotnet/issues/25
     - name: Setup side by side .NET SDKs
       if: matrix.os != 'windows-latest'
       run: |
-        rsync --archive --ignore-existing ${DOTNET_ROOT/3.1.201/2.1.805}/ ${DOTNET_ROOT/3.1.201/2.1.805}/ $DOTNET_ROOT
+      run: rsync -a ${DOTNET_ROOT/3.1.201/2.1.805}/* $DOTNET_ROOT/
 
     - name: Install dependencies
       run: dotnet restore
+
     - name: Build
       run: dotnet build --configuration Release --no-restore
 
