--- a/SnowMaker/SnowMaker.csproj
+++ b/SnowMaker/SnowMaker.csproj
@@ -8,6 +8,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="11.1.2" />
+    <!--<PackageReference Include="Microsoft.Azure.Storage.Blob" Version="11.1.2" />-->
+	  <PackageReference Include="Azure.Storage.Blobs" Version="12.8.1" />
   </ItemGroup>
 </Project>
