--- a/SnowMaker/SnowMaker.csproj
+++ b/SnowMaker/SnowMaker.csproj
@@ -13,4 +13,8 @@
 		<PackageReference Include="Azure.Storage.Blobs" Version="12.13.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Update="Nerdbank.GitVersioning" Version="3.5.107" />
+	</ItemGroup>
+
 </Project>
